Fix lesson text alignment

--- a/src/views/LearningHub/LearningHub.styl
+++ b/src/views/LearningHub/LearningHub.styl
@@ -451,7 +451,7 @@
         align-items: stretch;
         align-content: center;
         justify-content: center;
-        text-align: left; // Changed from center to left
+        text-align: center;
 
         > div {
             flex: 1;
